# MIDI-RGB-Lighting

./: .gitignore  README.md  SETUP_INSTRUCTIONS.md  Template.csv  generate_csv.py  setup_library.ps1
FL Studio Template/: lights.flp
LightEngineDLL/: BUILD.md  CMakeLists.txt  IMPLEMENTATION.md  README.md  STATUS.md
LightEngineDLL/src/: Constants.cpp  LightEngine.cpp  LightEngine.h  LightEngineAPI.cpp  LightEngineAPI.h  Metadata.cpp
LightEngineDLL/src/Modes/: Backgrounds.cpp  Comets.cpp  MovingDots.cpp  NotesToDrives.cpp  OceanWaves.cpp  RainbowWheel.cpp  RemainingModes.cpp
Source/: README.md
Source/lights/: lights.ino  name.c
Source/lights_esp32/: lights_esp32.ino
Source/lights_teensy/: lights_teensy.ino
libraries/LightEngine/: README.md  library.properties
libraries/LightEngine/src/: LightEngine.cpp  LightEngine.h
